# architectural-styles

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  pyproject.toml
.dvc/: config
architectural_styles/: __init__.py  main.py
architectural_styles/data/: __init__.py  data.py
architectural_styles/models/: __init__.py  train.py
architectural_styles/preprocessing/: __init__.py  preprocessing.py
configs/: config.yaml  train.yaml
configs/data/: default.yaml
configs/infer/: default.yaml
configs/logging/: checkpoints.yaml  mlflow.yaml
configs/model/: archinet.yaml  lenet.yaml
configs/train/: default.yaml
data/raw/: architectural-styles-dataset.dvc  g-images-dataset.dvc
data/raw/architectural-styles-dataset/: Baroque.dvc
src/architectural_styles/: __init__.py  infer.py  main.py  train.py
src/architectural_styles/data/: __init__.py  dataloaders.py  dataset.py  transform.py
src/architectural_styles/models/: __init__.py  archinet.py  lenet.py  module.py
src/architectural_styles/utils/: __init__.py  utils.py
